# ocrmypdfgui

./: README.md  com.github.alexanderlanganke.ocrmypdfgui.metainfo.xml  com.github.alexanderlanganke.ocrmypdfgui.yaml  ocrmypdfgui.py  setup.cfg  setup.py  snapcraft.yaml  test.py
.github/workflows/: python-publish.yml
gui/: ocrmypdfgui.desktop
ocrmypdfgui/: __init__.py
src/ocrmypdfgui/: __main__.py  bootstrap.py  gui.py  gui_gtk.py  gui_qt.py  ocr.py  ocrmypdfgui.desktop  ocrmypdfgui.py  plugin_progressbar.py  settings.ini  setup.py
