[metadata]
# replace with your username:
name = ocrmypdfgui
version = 0.0.1
author = Alexander Langanke
author_email = alexlanganke@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexanderlanganke/ormypdfgui
project_urls =
  Bug Tracker = https://github.com/alexanderlanganke/ormypdfgui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
  ocrmypdf

package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
