[metadata]
# replace with your username:
name = ocrmypdfgui
version = 0.0.4
author = Alexander Langanke
author_email = alexlanganke@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexanderlanganke/ocrmypdfgui
project_urls =
  Bug Tracker = https://github.com/alexanderlanganke/ocrmypdfgui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
  ocrmypdf

package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ocrmypdfgui = ocrmypdfgui:__main__
